tests/16-include-error.out
Error: Can't divide by zero
#(tests/throwfromuse.p:9)     return 42 / 0
                        |...............^
#(tests/throwfromuse.p:4) def countdownAndError(n) {
                        |.^
#(tests/throwfromuse.p:7)         return countdownAndError(n-1)
                        |................^
#(tests/throwfromuse.p:4) def countdownAndError(n) {
                        |.^
#(tests/throwfromuse.p:7)         return countdownAndError(n-1)
                        |................^
#(tests/throwfromuse.p:4) def countdownAndError(n) {
                        |.^
#(tests/throwfromuse.p:7)         return countdownAndError(n-1)
                        |................^
#(tests/throwfromuse.p:4) def countdownAndError(n) {
                        |.^
#(tests/throwfromuse.p:7)         return countdownAndError(n-1)
                        |................^
#(tests/throwfromuse.p:4) def countdownAndError(n) {
                        |.^
#(tests/throwfromuse.p:7)         return countdownAndError(n-1)
                        |................^
#(tests/throwfromuse.p:4) def countdownAndError(n) {
                        |.^
#(tests/16-include-error.p:5)     countdownAndError(5)
                            |.....^
