tests/16-include-error.p
    # check formatting of errors in functions that come from included files

    use "tests/throwfromuse.p"

    countdownAndError(5)
